# audio-tui

./: .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  clippy.yml  test.yml
src/: event.rs  main.rs  model.rs  update.rs  view.rs
